--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -159,6 +159,7 @@
 
       <%# 商品がない場合のダミー %>
       <%# 商品がある場合は表示されないようにしましょう %>
+      <% if @items.length == 0 %>
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
@@ -176,6 +177,7 @@
         </div>
         <% end %>
       </li>
+      <% end %>
       <%# //商品がある場合は表示されないようにしましょう %>
       <%# /商品がない場合のダミー %>
     </ul>
@@ -184,7 +186,7 @@
 </div>
 <div class='purchase-btn'>
   <% if user_signed_in? %>
-  <%= link_to "出品する" , items_path , class: "purchase-btn-text" %>
+  <%= link_to "出品する" , new_item_path , class: "purchase-btn-text" %>
    <% end %>
     <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
   </a>
